2009-03-02  Eric B. Weddington  <eric.weddington@atmel.com>

	* crt1/gcrt1.S (__init): Clear RAMPD, RAMPX, RAMPY, RAMPZ registers
	conditional on __AVR_HAVE_RAMPD__.
	* include/avr/common.h (AVR_RAMPD_REG, AVR_RAMPD_ADDR, AVR_RAMPX_REG,
	AVR_RAMPX_ADDR, AVR_RAMPY_REG, AVR_RAMPY_ADDR): Add definitions.

2009-03-02  Eric B. Weddington  <eric.weddington@atmel.com>

	* crt1/gcrt1.S (__do_copy_data): Make clearing of RAMPZ at end
	conditional on __AVR_HAVE_RAMPD__ (currently avrxmega3, avrxmega5,
	and avrxmega7 architectures). These architectures can access > 64K RAM,
	hence RAMPZ is required to be cleared.

2009-03-01  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #25120.
	* include/avr/pgmspace.h (__ELPM_xmega__, __ELPM_word_xmega__,
	__ELPM_dword_xmega__, __ELPM_float_xmega__): Add new macros.
	(__ELPM, __ELPM_word, __ELPM_dword, __ELPM_float): Add new conditional
	definitions based on __AVR_HAVE_RAMPD__ (i.e. avrxmega3, avrxmega5,
	and avrxmega7 architectures).
	* NEWS: Add item to fixed bug list.

2009-03-01  Dmitry Xmelkov  <dmix@gmail.ru>

	* libc/stdlib/setjmp.S: longjmp(): optimize stack pointer writing
	in case of XMEGA devices.

2009-02-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/util/delay.h (_delay_us): Swap _delay_us() and
	_delay_ms() so when _delay_us() wants to fall back to _delay_ms(),
	the function call can actually be inlined by the compiler.

2009-02-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom128rfa1.h: Fix some C syntax errors
	that have sneaked in during the last update.

2009-02-19  Eric B. Weddington  <eric.weddington@atmel.com>

	* configure.ac: Add support for ATmega16U4.
	* devtools/gen-avr-lib-tree.sh: Same.
	* include/avr/Makefile.am: Same.
	* include/avr/io.h: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/power.h: Same.
	* include/avr/wdt.h: Same.
	* include/avr/sleep.h: Same.
	* include/avr/iom16u4.h: New file.
	* NEWS: Add item.
